--- a/CV.tex
+++ b/CV.tex
@@ -52,7 +52,7 @@
 
 % % % % % Without headshot
 \vspace*{-0.5in}
-{\huge \name}\hfill\includegraphics[height=0.8in]{BNL}\\
+{\huge \name}\hfill\includegraphics[height=0.4in]{BNL}\\
 \vspace{0.1in}
 \begin{tabular}{ll|l|ll}
 Phone: & +1-631-344-3767 & Bldg 510A PO Box 5000 & Updated: & \today\\
@@ -62,7 +62,8 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 
 \subsection*{Research Experience}
 \begin{itemize}
-\item Assistant Physicist at Brookhaven National Laboratory, October 2018--Present.
+\item Associate Physicist at Brookhaven National Laboratory, October 2020--Present.
+\item Assistant Physicist at Brookhaven National Laboratory, October 2018--September 2020.
 \item Postdoctoral Fellow with Irene Tamborra at Niels Bohr International Academy, September 2016--August 2018.
 \item Graduate Student Research Program in Theoretical Physics with Stephen Parke at Fermilab, August 2015--August 2016.
 \item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011--Fall 2015.
@@ -73,8 +74,9 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 
 \subsection*{Research Interests}
 \begin{itemize}
-\item SM and BSM neutrino theory.
+\item Standard and beyond the standard model neutrino theory.
 \item Astroparticle physics.
+\item Black hole and dark matter phenomenology.
 \end{itemize}
 
 \subsection*{Education}
@@ -101,6 +103,8 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 \subsection*{Collaborations}
 \begin{itemize}
 \item Giant Radio Array for Neutrino Detection (GRAND), 2017--Present.
+\item Forward Search Experiment at the LHC (FASER), 2018--Present.
+\item Deep Underground Neutrino Experiment (DUNE), 2021--Present.
 \end{itemize}
 
 \subsection*{Physics Schools}
@@ -118,16 +122,17 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Service}
 \begin{itemize}
-\item Snowmass neutrino oscillations subtopic convener and neutrino theory liason 2020--2021.
-\item Convener for WIN 2021.
+\item NuTau2021 workshop co-chair.
+\item Brookhaven Forum co-chair 2021.
+\item Snowmass neutrino oscillations subtopic convener and neutrino theory liason 2020--2022 organizing many workshops.
+\item Convener for Brookhaven Forum 2019, DPF 2019, and WIN 2021.
 \item International Organizing Committee for Neutrino 2020.
-\item Convener for Brookhaven Forum 2019 and DPF 2019.
 \item Judge for the 12th International Neutrino Summer School at Fermilab 2019. 
 \item Chair for Pheno 2019, 2020.
-\item Reviewer for Physical Review Letters, Journal of High Energy Physics, Physical Review D, Physics Letters B, European Physical Journal C, Journal of Mathematical Physics, Nuclear Physics B, Monthly Notices of the Royal Astronomical Society, and Universe.
+\item Reviewer for Physical Review Letters, Journal of High Energy Physics, Physical Review D, Physics Letters B, European Physical Journal C, Reviews of Modern Physics, Journal of Mathematical Physics, Nuclear Physics B, Journal of Physics G, Monthly Notices of the Royal Astronomical Society, Modern Physics Letters A, Chinese Phyiscs C, and Universe.
 \item Brookhaven Neutrino Theory Virtual Seminar creator/organizer, 2020--Present.
-\item BNL HET seminar organizer, 2019--Present.
-\item BNL HET lunch discussion organizer, 2019--Present.
+\item BNL HET seminar organizer, 2019--2020.
+\item BNL HET lunch discussion organizer, 2019--2021.
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
 \end{itemize}
 
@@ -141,9 +146,9 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 \begin{itemize}
 \item Klaes M\o ller, University of Copenhagen, master's thesis: \emph{Constraining Astrophysical Parameters with Neutrinos}, 2017--2018.
 \item Anna Suliga, University of Copenhagen, master's thesis: \emph{Diffuse supernova neutrino background}, 2017--2018.
-Currently PhD student at University of Copenhagen.
+Defended her physics PhD 2021, currently postdoc at Berkeley and Wisconsin.
 \item Mia-Louise Nielsen, University of Copenhagen, bachelor's thesis: \emph{Star-forming galaxies as sources of high energy neutrinos}, 2017.
-Currently masters student at University of Copenhagen.
+Defended her physics MSc 2019.
 \end{itemize}
 
 \subsection*{Teaching}
