added npp dei and other misc things

--- a/CV.tex
+++ b/CV.tex
@@ -22,7 +22,7 @@
 
 \usepackage{sectsty}
 \sectionfont{\rmfamily\mdseries\Large}
-\subsectionfont{\rmfamily\mdseries\itshape\large}
+\subsectionfont{\rmfamily\mdseries\bfseries\large}
 \subsubsectionfont{\rmfamily\mdseries\itshape\normalsize}
 
 \setlength\parindent{0em}
@@ -74,12 +74,12 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 
 \subsection*{Research Interests}
 \begin{itemize}
-\item Standard and beyond the standard model neutrino theory.
+\item SM and BSM neutrino theory.
 \item Astroparticle physics.
-\item Black hole and dark matter phenomenology.
+\item Black hole phenomenology.
 \end{itemize}
 
-\subsection*{Education}
+\subsection*{Degrees}
 \begin{itemize}
 \item Ph.D.~Physics, Vanderbilt University, August 2016.
 \item B.S.~Physics, Rice University, May 2010.
@@ -87,8 +87,16 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 % \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005--2006.
 \end{itemize}
 
+\subsection*{Metrics}
+\begin{itemize}
+\item Papers: 67 total, 50 published (PRL 5, JHEP 8, JCAP 4, PRD 16, \dots), $h=22$.
+\item Talks: 86 total, 54 invited including 5 plenary and 3 colloquia.
+\end{itemize}
+
 \subsection*{Honors and Awards}
 \begin{itemize}
+\item Nominated and selected as the BNL delegate to the 2022 Science and Technology in Society Forum in Kyoto, October 2022.
+\item BNL NPP DEI grant \$10,000 to support Apurva Goel, awarded April 2022.
 \item Neutrino Physics Center (NPC) award of \$10,000 to work with Stephen Parke at Fermilab, awarded December 2018.
 \item Neutrino Theory Network (NTN) award of \$14,000 to work with Irina Mocioiu at PSU, awarded June 2018.
 \item The Giorgio Salvini diploma from the Erice International School of Subnuclear Physics, awarded June 2016.
@@ -97,7 +105,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 \item Subsidy of \$1,600 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders in June 2014, awarded April 2014.
 \item Division of Particles \& Fields travel grant to the APS April 2013 meeting, awarded March 2013.
 \item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student, awarded April 2011.
-\item McMinn Fellowship of \$25,000 over five years, awarded March 2010.
+\item McMinn Fellowship at Vanderbilt of \$25,000 over five years, awarded March 2010.
 \end{itemize}
 
 \subsection*{Collaborations}
@@ -105,6 +113,27 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 \item Giant Radio Array for Neutrino Detection (GRAND), 2017--Present.
 \item Forward Search Experiment at the LHC (FASER), 2018--Present.
 \item Deep Underground Neutrino Experiment (DUNE), 2021--Present.
+\end{itemize}
+
+\subsection*{Service}
+\begin{itemize}
+\item Member of BNL's Nuclear and Particle Physics DEI council, 2023--Present.
+\item Diversity Professional Leadership mentor through Stony Brook, 2022--Present.
+\item Co-chair of Brookhaven Forum 2021 and 2023.
+\item Co-chair of NuTau2021.
+\item Brookhaven Women In Science (BWIS) member, 2020--Present.
+\item Snowmass neutrino oscillations subtopic convener and neutrino theory liaison 2020--2022 organizing many workshops.
+\item Interact with grade-school students via APS's \emph{Adopt-A-Physicist}, Skype-A-Scientist, $\dots$ programs, 2018--2021.
+\item International Organizing Committee for Neutrino 2020.
+\item Convener for Brookhaven Forum 2019, DPF 2019, WIN 2021, and ICHEP 2022.
+\item N3AS Professional Development Training 2022.
+\item Judge for the 12th International Neutrino Summer School at Fermilab 2019. 
+\item Session chair for Pheno 2019, Pheno 2020, AstroDark-2021.
+\item Reviewer for Physical Review Letters, Journal of High Energy Physics, Physical Review D, Physics Letters B, European Physical Journal C, Reviews of Modern Physics, Journal of Mathematical Physics, Nuclear Physics B, Journal of Physics G, Journal of Open Source Science, Astrophysical Journal Letters, Monthly Notices of the Royal Astronomical Society, Modern Physics Letters A, Chinese Physics C, and Universe.
+\item Brookhaven Neutrino Theory Virtual Seminar creator/organizer, 2020--2022.
+\item BNL HET seminar organizer, 2019--2020, 2022--2023.
+\item BNL HET lunch discussion organizer, 2019--2021.
+\item NBIA Astroparticle journal club co-chair, 2017--2018.
 \end{itemize}
 
 \subsection*{Physics Schools}
@@ -120,34 +149,20 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, javascript, \dots
 \end{itemize}
 
-\subsection*{Service}
-\begin{itemize}
-\item NuTau2021 workshop co-chair.
-\item Brookhaven Forum co-chair 2021.
-\item Snowmass neutrino oscillations subtopic convener and neutrino theory liason 2020--2022 organizing many workshops.
-\item Convener for Brookhaven Forum 2019, DPF 2019, and WIN 2021.
-\item International Organizing Committee for Neutrino 2020.
-\item Judge for the 12th International Neutrino Summer School at Fermilab 2019. 
-\item Chair for Pheno 2019, 2020.
-\item Reviewer for Physical Review Letters, Journal of High Energy Physics, Physical Review D, Physics Letters B, European Physical Journal C, Reviews of Modern Physics, Journal of Mathematical Physics, Nuclear Physics B, Journal of Physics G, Monthly Notices of the Royal Astronomical Society, Modern Physics Letters A, Chinese Phyiscs C, and Universe.
-\item Brookhaven Neutrino Theory Virtual Seminar creator/organizer, 2020--Present.
-\item BNL HET seminar organizer, 2019--2020.
-\item BNL HET lunch discussion organizer, 2019--2021.
-\item NBIA Astroparticle journal club co-chair, 2017--2018.
-\end{itemize}
-
-\subsection*{Outreach}
-\begin{itemize}
-\item Brookhaven Women In Science (BWIS) member, 2020--Present.
-\item Interact with grade-school students via APS's \emph{Adopt-A-Physicist}, Skype-A-Scientist, $\dots$ programs, 2018--Present.
-\end{itemize}
-
 \subsection*{Students Advised/Mentored}
 \begin{itemize}
-\item Klaes M\o ller, University of Copenhagen, master's thesis: \emph{Constraining Astrophysical Parameters with Neutrinos}, 2017--2018.
-\item Anna Suliga, University of Copenhagen, master's thesis: \emph{Diffuse supernova neutrino background}, 2017--2018.
-Defended her physics PhD 2021, currently postdoc at Berkeley and Wisconsin.
-\item Mia-Louise Nielsen, University of Copenhagen, bachelor's thesis: \emph{Star-forming galaxies as sources of high energy neutrinos}, 2017.
+\item Apurva Goel: SULI student at Brookhaven 2022--curent.
+Currently a PhD student at UCSD.
+\item Rebekah Pestes: Virginia Tech, 2020--2021.
+Defended her physics PhD 2021, currently postdoc at Virginia Tech.
+\item Yves Kini: visiting student at Brookhaven 2019--2020.
+Currently PhD student at University of Amsterdam.
+\item Asli Abdullahi: IPPP Durham visiting PhD student at Brookhaven 2020.
+Defended her physics PhD in 2022, currently postdoc at FNAL.
+\item Klaes M\o ller: University of Copenhagen, master's thesis: \emph{Constraining Astrophysical Parameters with Neutrinos}, 2017--2018.
+\item Anna Suliga: University of Copenhagen, master's thesis: \emph{Diffuse supernova neutrino background}, 2017--2018.
+Defended her physics PhD 2021, currently postdoc at UC Berkeley and U Wisconsin-Madison.
+\item Mia-Louise Nielsen: University of Copenhagen, bachelor's thesis: \emph{Star-forming galaxies as sources of high energy neutrinos}, 2017.
 Defended her physics MSc 2019.
 \end{itemize}
 
@@ -159,9 +174,14 @@ Defended her physics MSc 2019.
 \item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels, 2005--2015.
 \end{itemize}
 
-\subsection*{Professional Societies}
+\subsection*{Other}
 \begin{itemize}
-\item Member, American Physical Society.
+\item Hobbies: ultimate frisbee, piano, photography.
+\item Third prize in the 2023 BNL Earth Day photo contest on when nature takes over.
 \end{itemize}
+% \subsection*{Professional Societies}
+% \begin{itemize}
+% \item Member, American Physical Society.
+% \end{itemize}
 
 \end{document}
