various small updates

--- a/CV.tex
+++ b/CV.tex
@@ -11,7 +11,7 @@
 \usepackage{calc}
 
 \usepackage{hyperref}
-\hypersetup{colorlinks=false,pdfborder={0 0 0}}
+\hypersetup{colorlinks=true,allcolors=[rgb]{1,0.56,0}}
 
 \def\name{Peter B.~Denton, Ph.D.}
 \title{CV}
@@ -77,7 +77,9 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 \item SM and BSM neutrino theory.
 \item Astroparticle physics.
 \item Black hole phenomenology.
+\item Dark matter physics.
 \end{itemize}
+Published papers \href{https://inspirehep.net/authors/1272961}{[inspire]}, \href{https://arxiv.org/search/?searchtype=author&query=Denton\%2C+P+B}{[arXiv]}
 
 \subsection*{Degrees}
 \begin{itemize}
@@ -87,14 +89,10 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 % \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005--2006.
 \end{itemize}
 
-\subsection*{Metrics}
-\begin{itemize}
-\item Papers: 67 total, 50 published (PRL 5, JHEP 8, JCAP 4, PRD 16, \dots), $h=22$.
-\item Talks: 86 total, 54 invited including 5 plenary and 3 colloquia.
-\end{itemize}
-
 \subsection*{Honors and Awards}
 \begin{itemize}
+\item Physical Review D Reviewer Excellence 2024 Award, awarded April 2024.
+\item Neutrino Physics Center (NPC) award of to work with Stephen Parke at Fermilab, awarded May 2023.
 \item Nominated and selected as the BNL delegate to the 2022 Science and Technology in Society Forum in Kyoto, October 2022.
 \item BNL NPP DEI grant \$10,000 to support Apurva Goel, awarded April 2022.
 \item Neutrino Physics Center (NPC) award of \$10,000 to work with Stephen Parke at Fermilab, awarded December 2018.
@@ -113,10 +111,12 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 \item Giant Radio Array for Neutrino Detection (GRAND), 2017--Present.
 \item Forward Search Experiment at the LHC (FASER), 2018--Present.
 \item Deep Underground Neutrino Experiment (DUNE), 2021--Present.
+\item LSST-DESC, 2024--Present.
 \end{itemize}
 
 \subsection*{Service}
 \begin{itemize}
+\item Pub Talk as a part of SURF's Neutrino Day program, July, 2024.
 \item Member of BNL's Nuclear and Particle Physics DEI council, 2023--Present.
 \item Diversity Professional Leadership mentor through Stony Brook, 2022--Present.
 \item Co-chair of Brookhaven Forum 2021 and 2023.
@@ -136,7 +136,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
 \end{itemize}
 
-\subsection*{Physics Schools}
+\subsection*{Physics Schools Attended}
 \begin{itemize}
 \item Erice International School of Subnuclear Physics in Sicily (ISSP), June 2016.
 \item Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014.
@@ -151,17 +151,21 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Students Advised/Mentored}
 \begin{itemize}
-\item Apurva Goel: SULI student at Brookhaven 2022--curent.
+\item Charlie Gourley: SULI student from RPI, 2024.
+\item Abdullah Moin: DPLN student from Stony Brook, 2024.
+\item DaiJon James: DPLN student from Stony Brook, 2022--2023.
+Currently a PhD student at Amherst.
+\item Apurva Goel: SULI student at Brookhaven 2022--2023.
 Currently a PhD student at UCSD.
-\item Rebekah Pestes: Virginia Tech, 2020--2021.
-Defended her physics PhD 2021, currently postdoc at Virginia Tech.
-\item Yves Kini: visiting student at Brookhaven 2019--2020.
+\item Rebekah Pestes: Virginia Tech SCGSR student to Brookhaven, 2020--2021.
+Defended her physics PhD 2021, postdoced in Paris, currently in industry.
+\item Yves Kini: visiting student through the African School of Physics at Brookhaven 2019--2020.
 Currently PhD student at University of Amsterdam.
 \item Asli Abdullahi: IPPP Durham visiting PhD student at Brookhaven 2020.
-Defended her physics PhD in 2022, currently postdoc at FNAL.
+Defended her physics PhD in 2022, postdoced at FNAL, currently a postdoc at IFT.
 \item Klaes M\o ller: University of Copenhagen, master's thesis: \emph{Constraining Astrophysical Parameters with Neutrinos}, 2017--2018.
 \item Anna Suliga: University of Copenhagen, master's thesis: \emph{Diffuse supernova neutrino background}, 2017--2018.
-Defended her physics PhD 2021, currently postdoc at UC Berkeley and U Wisconsin-Madison.
+Defended her physics PhD 2021, currently postdoc at UC Berkeley and UC San Diego.
 \item Mia-Louise Nielsen: University of Copenhagen, bachelor's thesis: \emph{Star-forming galaxies as sources of high energy neutrinos}, 2017.
 Defended her physics MSc 2019.
 \end{itemize}
@@ -177,7 +181,7 @@ Defended her physics MSc 2019.
 \subsection*{Other}
 \begin{itemize}
 \item Hobbies: ultimate frisbee, piano, photography.
-\item Third prize in the 2023 BNL Earth Day photo contest on when nature takes over.
+\item Third prize in the 2023 BNL Earth Day photo contest: ``When Nature Takes Over.''
 \end{itemize}
 % \subsection*{Professional Societies}
 % \begin{itemize}
