--- a/CV.tex
+++ b/CV.tex
@@ -65,7 +65,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 \item Physicist at Brookhaven National Laboratory, January 2024--Present.
 \item Associate Physicist at Brookhaven National Laboratory, October 2020--December 2023.
 \item Assistant Physicist at Brookhaven National Laboratory, October 2018--September 2020.
-\item Postdoctoral Fellow with Irene Tamborra at Niels Bohr International Academy, September 2016--August 2018.
+\item Postdoctoral Fellow at Niels Bohr International Academy, September 2016--August 2018.
 \item Graduate Student Research Program in Theoretical Physics with Stephen Parke at Fermilab, August 2015--August 2016.
 \item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011--Fall 2015.
 \item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer--Fall 2010.
@@ -80,7 +80,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 \item Black hole phenomenology.
 \item Dark matter physics.
 \end{itemize}
-Published papers \href{https://inspirehep.net/authors/1272961}{[inspire]}, \href{https://arxiv.org/search/?searchtype=author&query=Denton\%2C+P+B}{[arXiv]}
+Papers \href{https://inspirehep.net/authors/1272961}{[inspire]}, \href{https://arxiv.org/search/?searchtype=author&query=Denton\%2C+P+B}{[arXiv]}
 
 \subsection*{Degrees}
 \begin{itemize}
@@ -109,20 +109,21 @@ Published papers \href{https://inspirehep.net/authors/1272961}{[inspire]}, \href
 
 \subsection*{Collaborations}
 \begin{itemize}
-\item Giant Radio Array for Neutrino Detection (GRAND), 2017--Present.
-\item Forward Search Experiment at the LHC (FASER), 2018--Present.
 \item Deep Underground Neutrino Experiment (DUNE), 2021--Present.
+\item Forward Search Experiment at the LHC (FASER), 2018--Present.
+\item Giant Radio Array for Neutrino Detection (GRAND), 2017--Present.
 \item LSST-DESC, 2024--Present.
 \end{itemize}
 
 \subsection*{Service}
 \begin{itemize}
+\item Long Island Science \& Engineering Fair judge, February, 2025.
 \item Pub Talk as a part of SURF's Neutrino Day program, July, 2024.
-\item Member of BNL's Nuclear and Particle Physics DEI council, 2023--Present.
+\item Member of BNL's Nuclear and Particle Physics DEI council, 2023--2025.
 \item Diversity Professional Leadership mentor through Stony Brook, 2022--Present.
-\item Co-chair of Brookhaven Forum 2021 and 2023.
+\item Co-chair of Brookhaven Forum 2021, 2023, 2025.
 \item Co-chair of NuTau2021.
-\item Brookhaven Women In Science (BWIS) member, 2020--Present.
+\item Brookhaven Women In Science (BWIS) member, 2020--2025.
 \item Snowmass neutrino oscillations subtopic convener and neutrino theory liaison 2020--2022 organizing many workshops.
 \item Interact with grade-school students via APS's \emph{Adopt-A-Physicist}, Skype-A-Scientist, $\dots$ programs, 2018--2021.
 \item International Organizing Committee for Neutrino 2020.
@@ -161,12 +162,12 @@ Currently a PhD student at UCSD.
 \item Rebekah Pestes: Virginia Tech SCGSR student to Brookhaven, 2020--2021.
 Defended her physics PhD 2021, postdoced in Paris, currently in industry.
 \item Yves Kini: visiting student through the African School of Physics at Brookhaven 2019--2020.
-Currently PhD student at University of Amsterdam.
+Currently a postdoc at University of Amsterdam.
 \item Asli Abdullahi: IPPP Durham visiting PhD student at Brookhaven 2020.
 Defended her physics PhD in 2022, postdoced at FNAL, currently a postdoc at IFT.
 \item Klaes M\o ller: University of Copenhagen, master's thesis: \emph{Constraining Astrophysical Parameters with Neutrinos}, 2017--2018.
 \item Anna Suliga: University of Copenhagen, master's thesis: \emph{Diffuse supernova neutrino background}, 2017--2018.
-Defended her physics PhD 2021, currently postdoc at UC Berkeley and UC San Diego.
+Defended her physics PhD 2021, currently postdoc at NYU.
 \item Mia-Louise Nielsen: University of Copenhagen, bachelor's thesis: \emph{Star-forming galaxies as sources of high energy neutrinos}, 2017.
 Defended her physics MSc 2019.
 \end{itemize}
