--- a/CV.tex
+++ b/CV.tex
@@ -93,7 +93,7 @@ Papers \href{https://inspirehep.net/authors/1272961}{[inspire]}, \href{https://a
 \subsection*{Honors and Awards}
 \begin{itemize}
 \item Physical Review D Reviewer Excellence 2024 Award, awarded April 2024.
-\item Neutrino Physics Center (NPC) award of to work with Stephen Parke at Fermilab, awarded May 2023.
+\item Neutrino Physics Center (NPC) award to work with Stephen Parke at Fermilab, awarded May 2023.
 \item Nominated and selected as the BNL delegate to the 2022 Science and Technology in Society Forum in Kyoto, October 2022.
 \item BNL NPP DEI grant \$10,000 to support Apurva Goel, awarded April 2022.
 \item Neutrino Physics Center (NPC) award of \$10,000 to work with Stephen Parke at Fermilab, awarded December 2018.
