--- a/CV.tex
+++ b/CV.tex
@@ -62,7 +62,8 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 
 \subsection*{Research Experience}
 \begin{itemize}
-\item Physicist at Brookhaven National Laboratory, January 2024--Present.
+\item Senior Physicist at Brookhaven National Laboratory, January 2026--Present.
+\item Physicist at Brookhaven National Laboratory, January 2024--December 2025.
 \item Associate Physicist at Brookhaven National Laboratory, October 2020--December 2023.
 \item Assistant Physicist at Brookhaven National Laboratory, October 2018--September 2020.
 \item Postdoctoral Fellow at Niels Bohr International Academy, September 2016--August 2018.
